<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/button_kitchen"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/kitchen" />
        
        <Button
            android:id="@+id/button_livingRoom"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/livingRoom" />
        
        <Button
            android:id="@+id/button_bedroom"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/bedroom" />
        
        <Button
            android:id="@+id/button_office"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/office" />
        
        <Button
            android:id="@+id/button_bathroom"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/bathroom" />
        
    </LinearLayout>
    

</ScrollView>
