<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/button_places"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="35"
        android:layout_gravity="left|center"
        android:text="@string/places" />
    
    <Button
        android:id="@+id/button_type"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_weight="30"
        android:text="@string/types" />
    
    <Button
        android:id="@+id/button_state"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="35"
        android:layout_gravity="right|center"
        android:text="@string/states" />
    
</LinearLayout>
